@@ -36,6 +36,7 @@ tests_num:
 	data 0.000000000125,                "#.##e-0",          "1.25e-10"
 	data 0.999999,  "#.00e+000",        "1.00e+000"
 	data 9.9e+20,   "#",                "990000000000000000000"
+	data 4.9e-324,  "#.#e+#",           "4.9e-324"
 	data 9.9e-100,  "###################e+#", "9900000000000000000e-118"
 
 	data -0.1236,   "##0.00%",          "-12.36%"
@@ -65,6 +66,7 @@ tests_num:
 	data -0.000000000125,               "#.##e-0",          "-1.25e-10"
 	data -0.999999, "#.00e+000",        "-1.00e+000"
 	data -9.9e+20,  "#",                "-990000000000000000000"
+	data -4.9e-324, "#.#e+#",           "-4.9e-324"
 	data -9.9e-100, "###################e+#", "-9900000000000000000e-118"
 
 	data -0.1236,   "##0.00%-",         "12.36%-"
@@ -94,6 +96,7 @@ tests_num:
 	data -0.000000000125,               "#.##e-0-",          "1.25e-10-"
 	data -0.999999, "#.00e+000-",       "1.00e+000-"
 	data -9.9e+20,  "#-",               "990000000000000000000-"
+	data -4.9e-324, "#.#e+#-",          "4.9e-324-"
 	data -9.9e-100, "###################e+#-", "9900000000000000000e-118-"
 
 	data 0.1236,    "##0.00%-",         "12.36%"
@@ -123,6 +126,7 @@ tests_num:
 	data 0.000000000125,                "#.##e-0-",          "1.25e-10"
 	data 0.999999,  "#.00e+000-",       "1.00e+000"
 	data 9.9e+20,   "#-",               "990000000000000000000"
+	data 4.9e-324,  "#.#e+#-",          "4.9e-324"
 	data 9.9e-100, "###################e+#-", "9900000000000000000e-118"
 
 	data 1234,      "###,0.00",         "1,234.00"
